// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#zashiki-react-redux/app/components/stages/alpha/gears/component Always renders 1`] = `null`;

exports[`#zashiki-react-redux/app/components/stages/alpha/gears/component renders \`forward\` 1`] = `
<ul
  className="shinkansen-gears"
>
  <li
    className="shinkansen-gears-forward"
  >
    <a
      className="mock-link"
      href="/MOCK ALPHA/MOCK OMEGA"
    >
      Forward
    </a>
  </li>
</ul>
`;

exports[`#zashiki-react-redux/app/components/stages/alpha/gears/component renders \`reverse\` 1`] = `
<ul
  className="shinkansen-gears"
>
  <li
    className="shinkansen-gears-reverse"
  >
    <a
      className="mock-link"
      href="/MOCK ALPHA/MOCK OMEGA"
    >
      Reverse
    </a>
  </li>
</ul>
`;

exports[`#zashiki-react-redux/app/components/stages/alpha/gears/component renders \`reverse\` and \`forward\` 1`] = `
<ul
  className="shinkansen-gears"
>
  <li
    className="shinkansen-gears-reverse"
  >
    <a
      className="mock-link"
      href="/MOCK ALPHA/MOCK OMEGA"
    >
      Reverse
    </a>
  </li>
  <li
    className="shinkansen-gears-forward"
  >
    <a
      className="mock-link"
      href="/MOCK ALPHA/MOCK OMEGA"
    >
      Forward
    </a>
  </li>
</ul>
`;
